--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -51,9 +51,7 @@
 
 .login-button {
   --background: #43a047;
-  /* Cor verde */
   --background-hover: #388e3c;
-  /* Cor verde mais escuro */
   color: white;
   margin-top: 20px;
 }
@@ -65,20 +63,21 @@
 
 .signup-link {
   text-decoration: none;
-  /* Remove o sublinhado do link */
   color: #43a047;
-  /* Opcional: cor verde correspondente ao tema */
 }
 
 .signup-link:hover {
   text-decoration: underline;
-  /* Opcional: adiciona sublinhado ao passar o mouse */
 }
 
 .ion-text-center {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.input-label {
+  color: #106614;
 }
 
 @media (min-width: 1200px) {
